--- a/src/app/(cities)/bialystok/page.mdx
+++ b/src/app/(cities)/bialystok/page.mdx
@@ -1,5 +1,59 @@
+import { env } from '../../../env';
+import { CityEmail } from '../../../components/CityEmail';
+import { Organizers } from '../../../components/Orginizers';
+import { FAQ } from '../../../components/FAQ';
+import { LocalGroups } from '../../../components/LocalGroups';
+import { CityBanner } from '../../../components/CityBanner';
+import { BialystokFAQ } from './_FAQ';
+import { BialystokOrganizers } from './_Organizers';
+
 export const metadata = {
-	title: "meet.js Białystok",
+  metadataBase: new URL(`${env.SITE_URL}/bialystok`),
+  title: 'meet.js Białystok',
+  description: 'JavaScript meetups in Białystok',
+  keywords: 'meet.js, Białystok, JavaScript, meetup',
+  openGraph: {
+    title: 'meet.js Białystok',
+    description: 'JavaScript meetups in Białystok',
+    type: 'website',
+    locale: 'en_US',
+    url: `${env.SITE_URL}/bialystok`,
+    siteName: 'meet.js',
+    images: [
+      {
+        url: `${env.SITE_URL}/api/og?city=Białystok`,
+        width: 1200,
+        height: 630,
+        alt: 'meet.js | JavaScript meetups in Białystok',
+      },
+    ],
+  },
+  twitter: {
+    card: 'summary_large_image',
+    site: '@meetjs',
+    title: 'meet.js',
+    description: 'JavaScript meetups in Białystok',
+    images: [
+      {
+        url: `${env.SITE_URL}/api/og?city=Białystok`,
+        width: 1200,
+        height: 630,
+        alt: 'meet.js | JavaScript meetups in Białystok',
+      },
+    ],
+  },
 };
 
-# Białystok
+<CityBanner city="Białystok" background="city/bialystok.jpg" />
+
+<LocalGroups
+  localGroups={[
+    'https://www.meetup.com/meet-js-bialystok/',
+  ]}
+/>
+
+<FAQ questions={BialystokFAQ} />
+
+<Organizers city="Białystok" organizers={BialystokOrganizers} />
+
+<CityEmail email="bialystok@meetjs.pl" />
