--- a/src/app/(cities)/gdansk/page.mdx
+++ b/src/app/(cities)/gdansk/page.mdx
@@ -1,5 +1,59 @@
+import { env } from '../../../env';
+import { CityEmail } from '../../../components/CityEmail';
+import { Organizers } from '../../../components/Orginizers';
+import { FAQ } from '../../../components/FAQ';
+import { LocalGroups } from '../../../components/LocalGroups';
+import { CityBanner } from '../../../components/CityBanner';
+import { GdanskFAQ } from './_FAQ';
+import { GdanskOrganizers } from './_Organizers';
+
 export const metadata = {
-	title: "meet.js Gdańsk",
+	metadataBase: new URL(`${env.SITE_URL}/gdansk`),
+	title: 'meet.js Gdańsk',
+	description: 'JavaScript meetups in Gdańsk',
+	keywords: 'meet.js, Gdańsk, JavaScript, meetup',
+	openGraph: {
+		title: 'meet.js Gdańsk',
+		description: 'JavaScript meetups in Gdańsk',
+		type: 'website',
+		locale: 'en_US',
+		url: `${env.SITE_URL}/gdansk`,
+		siteName: 'meet.js',
+		images: [
+			{
+				url: `${env.SITE_URL}/api/og?city=Gdańsk`,
+				width: 1200,
+				height: 630,
+				alt: 'meet.js | JavaScript meetups in Gdańsk',
+			},
+		],
+	},
+	twitter: {
+		card: 'summary_large_image',
+		site: '@meetjs',
+		title: 'meet.js',
+		description: 'JavaScript meetups in Gdańsk',
+		images: [
+			{
+				url: `${env.SITE_URL}/api/og?city=Gdańsk`,
+				width: 1200,
+				height: 630,
+				alt: 'meet.js | JavaScript meetups in Gdańsk',
+			},
+		],
+	},
 };
 
-# Gdańsk
+<CityBanner city="Gdańsk" background="city/gdansk.jpg" />
+
+<LocalGroups
+	localGroups={[
+		'https://www.meetup.com/meet-js-trojmiasto/',
+	]}
+/>
+
+<FAQ questions={GdanskFAQ} />
+
+<Organizers city="Gdańsk" organizers={GdanskOrganizers} />
+
+<CityEmail email="trojmiasto@meetjs.pl" />
