--- a/src/app/(cities)/katowice/page.mdx
+++ b/src/app/(cities)/katowice/page.mdx
@@ -1,5 +1,59 @@
+import { env } from '../../../env';
+import { CityEmail } from '../../../components/CityEmail';
+import { Organizers } from '../../../components/Orginizers';
+import { FAQ } from '../../../components/FAQ';
+import { LocalGroups } from '../../../components/LocalGroups';
+import { CityBanner } from '../../../components/CityBanner';
+import { KatowiceFAQ } from './_FAQ';
+import { KatowiceOrganizers } from './_Organizers';
+
 export const metadata = {
-	title: "meet.js Katowice",
+	metadataBase: new URL(`${env.SITE_URL}/katowice`),
+	title: 'meet.js Katowice',
+	description: 'JavaScript meetups in Katowice',
+	keywords: 'meet.js, Katowice, JavaScript, meetup',
+	openGraph: {
+		title: 'meet.js Katowice',
+		description: 'JavaScript meetups in Katowice',
+		type: 'website',
+		locale: 'en_US',
+		url: `${env.SITE_URL}/katowice`,
+		siteName: 'meet.js',
+		images: [
+			{
+				url: `${env.SITE_URL}/api/og?city=Katowice`,
+				width: 1200,
+				height: 630,
+				alt: 'meet.js | JavaScript meetups in Katowice',
+			},
+		],
+	},
+	twitter: {
+		card: 'summary_large_image',
+		site: '@meetjs',
+		title: 'meet.js',
+		description: 'JavaScript meetups in Katowice',
+		images: [
+			{
+				url: `${env.SITE_URL}/api/og?city=Katowice`,
+				width: 1200,
+				height: 630,
+				alt: 'meet.js | JavaScript meetups in Katowice',
+			},
+		],
+	},
 };
 
-# Katowice
+<CityBanner city="Katowice" background="city/katowice.jpg" />
+
+<LocalGroups
+	localGroups={[
+		'https://www.meetup.com/meet-js-katowice/',
+	]}
+/>
+
+<FAQ questions={KatowiceFAQ} />
+
+<Organizers city="Katowice" organizers={KatowiceOrganizers} />
+
+<CityEmail email="katowice@meetjs.pl" />
